# estacion_meteorologica

./: .gitignore  AGENTS.md  CLAUDE.md  setup-simulation.bat  start-simulation.bat
.claude/: launch.json
.github/workflows/: deploy-pages.yml
backend/: .env.example  README.md  alembic.ini  app.py  payload.py  pyproject.toml  querys_db.sql  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202606260001_initial_schema.py  202607011200_add_battery_level.py
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/api/: routes.py
backend/app/db/: models.py  session.py
backend/app/services/: metrics.py  stations.py
backend/tests/: conftest.py  test_api.py
firmware/: Cargo.toml  README.md  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/docs/: hardware-assumptions.md
firmware/gateway-mock/: Cargo.toml  README.md
firmware/gateway-mock/src/: main.rs
firmware/src/: config.rs  lib.rs  nvs.rs  payload.rs  pulse.rs  radio.rs  sensors.rs
firmware/src/lorawan/: crypto.rs  frame.rs  mod.rs  session.rs
frontend/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  config.ts  hooks.ts  types.ts
frontend/src/components/: BatteryBar.tsx  BatteryIcon.tsx  ChartCard.tsx  Charttooltip.tsx  Dualrangeslider.tsx  Graficaspanel.tsx  InlineError.tsx  MetricCard.tsx  SelectedMetricChart.tsx  Sidebar.tsx  Skeleton.tsx  StationManagmentPanel.tsx  StationPanel.tsx  StationSwitcherModal.tsx  Stationlogpanel.tsx  ToastProvider.tsx  Topbar.tsx
frontend/src/data/: MetricChartConfig.ts  Stationlog.ts  WeatherSeries.ts
infra/: SETUP.md  docker-compose.yml
infra/chirpstack/: chirpstack.toml
infra/chirpstack-gateway-bridge/: chirpstack-gateway-bridge.toml
infra/postgres-init/: init.sql
openspec/: config.yaml
openspec/changes/add-battery-level-backend/: design.md  proposal.md  tasks.md
openspec/changes/add-battery-level-frontend/: design.md  proposal.md  tasks.md
openspec/changes/add-main-dashboard-ui/: proposal.md  tasks.md
openspec/changes/archive/2026-06-29-connect-frontend-to-api/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-29-migrate-lorawan-sx1276/: design.md  proposal.md
openspec/changes/backend-lorawan-ingestion/: design.md  proposal.md  tasks.md
openspec/changes/fix-dashboard-ui-glitches/: tasks.md
openspec/changes/frontend-error-ux/: design.md  proposal.md
openspec/changes/implement-backend-rest-api/: design.md  proposal.md  tasks.md
openspec/changes/loading-skeletons/: design.md  tasks.md
openspec/changes/metric-card-chart-detail/: design.md  tasks.md
openspec/changes/migrate-lorawan-sx1278/: design.md  proposal.md  tasks.md
openspec/changes/mock-sensor-firmware/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/spike-firmware-lora-sensors/: design.md  tasks.md
openspec/changes/station-switcher/: tasks.md
openspec/specs/backend-API/: spec.md
openspec/specs/firmware-lora-sensor-spike/: spec.md
openspec/specs/frontend-api-client/: spec.md
openspec/specs/inline-error/: spec.md
openspec/specs/loading-skeleton/: spec.md
openspec/specs/station-switcher/: spec.md
openspec/specs/toast-notifications/: spec.md
openspec/specs/web-dashboard/: spec.md
scripts/: setup-simulation.ps1  simulation_api.py  start-simulation.ps1
(+41 files in other folders)
