[package]
name = "weather-spike-firmware"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "weather_spike_firmware"
path = "src/lib.rs"

[[bin]]
name = "sensor-node"
path = "src/bin/sensor-node.rs"

[[bin]]
name = "receiver-node"
path = "src/bin/receiver-node.rs"

[dependencies]
anyhow = "1"
log = "0.4"
heapless = "0.8"
esp-idf-hal = "0.44"
esp-idf-svc = "0.49"
embedded-svc = "0.28"

[build-dependencies]
embuild = "0.32"
