[package]
name = "weather-firmware"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "weather_firmware"
path = "src/lib.rs"

# Nodo sensor LoRaWAN (este cambio)
[[bin]]
name = "sensor-node"
path = "src/bin/sensor-node.rs"

# Gateway single-channel UDP packet forwarder (este cambio)
[[bin]]
name = "gateway-node"
path = "src/bin/gateway-node.rs"

# Receptor P2P del spike (legacy, conservado para referencia)
[[bin]]
name = "receiver-node"
path = "src/bin/receiver-node.rs"

[dependencies]
anyhow = "1"
log = "0.4"
heapless = "0.8"
esp-idf-hal = "0.44"
esp-idf-svc = "0.49"
embedded-svc = "0.28"

# LoRaWAN EU433: crypto primitives para OTAA y uplinks Class A
aes = { version = "0.8", default-features = false }
cmac = "0.7"

# Serialización JSON para el protocolo Semtech UDP del gateway
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"

[build-dependencies]
embuild = "0.32"
